# substrate-zk

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml
bellman-verifier/: Cargo.toml
bellman-verifier/src/: lib.rs
node/: Cargo.toml  Cargo_old.toml
node/src/: benchmarking.rs  main.rs
node/src/new_code/: benchmarking_diff.patch  chain_spec_diff.patch  cli_diff.patch  command_diff.patch  main_diff.patch  rpc_diff.patch  service_diff.patch
node/src/old_code/: command_old.rs  service_old.rs
pallets/maci-verifier/: Cargo.toml
pallets/maci-verifier/src/: circuit.rs  lib.rs  parser.rs  types.rs
pallets/multisig/: Cargo.toml
pallets/multisig/src/: lib.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/verifier/: Cargo.toml
pallets/verifier/src/: benchmarking.rs  lib.rs  mock.rs  parser.rs  tests.rs  types.rs  weights.rs
runtime/: Cargo.toml  Cargo_old.toml
runtime/src/: lib.rs  lib_old.rs
runtime/src/weights/: mod.rs  pallet_multisig.rs
zk-tutorials/: ZKSNARKS.md
zk-tutorials/proof-system/groth16/: theory_to_practice.md
zk-verifier/: Cargo.toml
zk-verifier/src/: lib.rs  verifier.rs
zklib/bellman/: Cargo.toml
zklib/bellman/src/: domain.rs  lib.rs
zklib/bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
