[package]
description = "A zk-SNARK library compatiable with substrate"
license = "MIT/Apache-2.0"
name = "bellman-verifier"
version = "0.1.0"
edition = "2021"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["atomic", "alloc"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
byteorder = { version = "1", default-features = false }
ff = { version = "0.12" }
group = { version = "0.12", default-features = false }
pairing = { version = "0.22", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
sp-std = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

# Multicore dependencies
num_cpus = { version = "1", optional = true }
crossbeam-channel = { version = "0.5.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4", optional = true }
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
bls12_381 = "0.7"
criterion = "0.3"
hex-literal = "0.3"
rand = "0.8"
rand_xorshift = "0.3"
sha2 = "0.10"

[features]
default = ["std", "groth16"]
groth16 = ["pairing"]
std = [
    "rand_core/std",
    "byteorder/std",
    "codec/std",
    "sp-std/std",
]