[package]
name = "pallet-maci-verifier"
version = "4.0.0-dev"
description = "a pallet for the maci verification"
authors = ["DoraFactory"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", optional = true }
sp-std = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

# zk lib
# bellman-verifier = { path = "../../zk-verifier" }
# rand_core = { version = "0.6", default-features = false }
# getrandom = { version = "0.2", features = ["js"] }
# byteorder = { version = "1", default-features = false }
# ff = { version = "0.12" }
# group = { version = "0.12" }
# pairing = { version = "0.22", default-features = false }
# bls12_381 = {version = "0.7" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-std/std",
	# "rand_core/std",
    # "byteorder/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
